<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Zmiana_hasla"
    android:background="@drawable/tlo_powitania">
    <TextView
        android:id="@+id/tytul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:fontFamily="@font/magnolia_script"
        android:gravity="center"
        android:text="@string/ustawienia_konta"
        android:textColor="@color/kolor_tytulu"
        android:textSize="40sp" />
    <EditText
        android:id="@+id/et_stare_haslo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="30sp"
        android:background="#BEF5D5A3"
        android:hint="@string/podaj_stare_haslo"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:fontFamily="@font/times"
        android:layout_below="@id/tytul"/>
    <EditText
        android:id="@+id/et_nowe_haslo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="30sp"
        android:background="#BEF5D5A3"
        android:hint="@string/podaj_nowe_haslo"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:fontFamily="@font/times"
        android:layout_below="@id/et_stare_haslo"/>
    <Button
        android:id="@+id/bt_zmien_haslo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/zmien_haslo"
        android:background="#FF9800"
        android:textSize="25sp"
        android:fontFamily="@font/times"
        android:layout_below="@id/et_nowe_haslo"
        android:onClick="zmien_haslo"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/bt_domyslne_haslo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/domyslne_haslo"
        android:background="#FF9800"
        android:textSize="20sp"
        android:fontFamily="@font/times"
        android:layout_below="@id/bt_zmien_haslo"
        android:onClick="domyslne_haslo"
        android:textStyle="bold"
        android:paddingHorizontal="5dp"
        />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="30sp"
        android:background="#BEF5D5A3"
        android:hint="@string/podaj_email"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/times"
        android:layout_below="@id/bt_domyslne_haslo"/>
    <Button
        android:id="@+id/bt_ustaw_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/ustaw_email"
        android:background="#FF9800"
        android:textSize="25sp"
        android:fontFamily="@font/times"
        android:layout_below="@id/et_email"
        android:onClick="ustaw_email"
        android:textStyle="bold"
        android:paddingHorizontal="5dp"
        />
</RelativeLayout>