<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Wykresy_wybierz"
    android:background="@drawable/tlo_powitania">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="5dp"
            android:text="@string/wybierz_dane_dla_wykresu"
            android:textColor="@color/kolor_tytulu"
            android:fontFamily="@font/magnolia_script"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/temperatura"
            android:background="#FF9800"
            android:textSize="25sp"
            android:fontFamily="@font/times"
            android:onClick="wykres_temperatura"
            android:textStyle="bold"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/wilgotnosc"
            android:background="#FF9800"
            android:textSize="25sp"
            android:fontFamily="@font/times"
            android:onClick="wykres_wilgotnosc"
            android:textStyle="bold"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/cisnienie"
            android:background="#FF9800"
            android:textSize="25sp"
            android:fontFamily="@font/times"
            android:onClick="wykres_cisnienie"
            android:textStyle="bold"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/szkodliwe_gazy"
            android:background="#FF9800"
            android:textSize="25sp"
            android:fontFamily="@font/times"
            android:onClick="wykres_szkodliwe_gazy"
            android:textStyle="bold"
            />
    </LinearLayout>
</RelativeLayout>